
[workspace]
resolver="2"
members=[
    "xml",
    "json"
]
[workspace.package]
version = "0.1.0"

[package]
name = "rust-mod"
version = "0.1.0"
edition = "2021"

#[[bin]]
#path= "src/main.rs"
#name='rg'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json={path = "./json",version = "0.1.0"}